flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 172.25.199.102:5050/flask-app-image:latest
        ports:
        - containerPort: 5000
